# peekabrowser

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  picker.html  settings.html  system-config.html  vite.config.ts
scripts/: Install.command  package-dmg.sh
src/: main.ts  picker.css  picker.ts  settings.css  settings.ts  styles.css  system-config.css  system-config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: extractor.js  injector.js  ocr-helper
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/ocr-helper/: main.swift
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/destinations/: defaults.rs  mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/hotkeys/: double_cmd_c.rs  global_shortcuts.rs  mod.rs  shortcut_store.rs
src-tauri/src/panel/: hover_detector.rs  mod.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/screenshot/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/webviews/: mod.rs
