[package]
name = "peekabrowser"
version = "1.6.0"
description = "Peekabrowser - macOS Sidebar Browser"
authors = ["you"]
edition = "2021"

[lib]
name = "peekabrowser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
url = "2"
log = "0.4"
env_logger = "0.11"
